--- a/_layouts/defaultdark.html
+++ b/_layouts/defaultdark.html
@@ -25,7 +25,7 @@
       {{content}}
  
 
-    {%include footer2.html %}
+    {%include footer.html %}
   </body>
 
   <script src="{{site.baseurl}}/js/bootstrap.bundle.min.js"></script>
