--- a/_includes/footer2.html
+++ b/_includes/footer2.html
@@ -4,14 +4,14 @@
     <p class="text-center mb-1">
       <a class="btn btn-secondary" href="#">Back to top</a>
     </p>
-    <p class="mb-1" id="contact">&copy; Aysh Inventions Ltd @ 2022</p>
-    <p class="text-dark">
+    <p class="mb-1 text-light" id="contact">&copy; Aysh Inventions Ltd @ 2022</p>
+    <p class="text-light">
       <i class="text-danger">REV 14:7.............</i>Fear God, and give
       Glory to Him......Worship Him who made Heaven and Earth....
     </p>
     <hr />
     <p>
-      <a class="btn text-dark" href="mailto:ayshinventions@gmail.com">
+      <a class="btn text-light" href="mailto:ayshinventions@gmail.com">
         <svg
           width="18"
           height="16"
@@ -41,7 +41,7 @@
         ayshinventions@gmail.com
       </a>
 
-      <a class="btn text-info" href="Tel:+256773913902">
+      <a class="btn text-warning" href="Tel:+256773913902">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="16"
