--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -22,7 +22,7 @@ layout: blog-item
   </div>
 
   <p class="ib push-1-2 py-3">
-    <a href="{{site.baseurl}}/blog/" class="btn btn-danger text-white back"> See other articles</a>
+    <a href="{{site.baseurl}}/blog.html" class="btn btn-danger text-white back"> See other articles</a>
   </p>
 
 </main>
